--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
+    <string name="facebook_app_id">240812453034300</string>
+    <string name="server_client_id">149983591581-b0h83c0lgprr8idqmj67l8n694ecf7n0.apps.googleusercontent.com</string>
     <string name="app_name">RedPlace</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_login">Sign in</string>
-
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -15,4 +16,6 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_activity_jjjj">Sign in</string>
+    <string name="email">Email</string>
 </resources>
